# rust-spanner-1

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README-parse-claude.md  README.md  docker-compose.yml  loop.sh  parse-claude  parse-claude-compact.jq  parse-claude-normal.jq  show-turn-timing.sh  step.sh  stop-server.sh
.claude/skills/choose-next-task/: SKILL.md
.claude/skills/implement-next-task/: SKILL.md
.claude/skills/implement-task/: SKILL.md
.claude/skills/plan-next-spec/: SKILL.md
.claude/skills/plan-spec-tasks/: SKILL.md
.claude/skills/specify-idea/: SKILL.md
ideas/: 1.md  fast-git-commits.md  list-all-kv-endpoint.md  openapi-docs.md  rust-spanner-kv.md
scripts/: commit.sh
specs/: README.md
specs/configuration/: README.md
specs/configuration/tasks/: README.md  config-struct.md  init-project.md
specs/fast-commit/: README.md
specs/fast-commit/tasks/: README.md  create-commit-script.md
specs/http-api/: README.md
specs/http-api/tasks/: README.md  error-handling.md  get-endpoint.md  health-endpoint.md  put-endpoint.md  server-setup.md
specs/list-kv/: README.md
specs/list-kv/tasks/: README.md  get-kv-handler.md  integration-tests.md  spanner-list-query.md
specs/local-development/: README.md
specs/local-development/tasks/: README.md  docker-compose.md  env-files.md  (+1 more)
specs/openapi-docs/: README.md
specs/spanner-integration/: README.md
specs/spec-name/: README.md
src/: api_doc.rs  config.rs  error.rs  main.rs  models.rs  routes.rs  spanner.rs  state.rs
src/handlers/: get.rs  health.rs  list.rs  mod.rs  put.rs
(+11 files in other folders)
