[package]
name = "rust-spanner-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gcloud-spanner = "1.7.0"
gcloud-gax = "1.3.2"
gcloud-googleapis = { version = "1.3.0", features = ["spanner"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
dotenvy = "0.15"
chrono = "0.4"
prost-types = "0.13"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
